assets/css/style.css
/* Layout color for all pages */
/* https://coolors.co/palette/000000-14213d-fca311-e5e5e5-ffffff */

.navbar {
    background-color: #14213D;
}

body {
    background-color: #000000;
}

p,
li {
    color: #FFFFFF;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #FCA311;
}

a {
    color: #E5E5E5;
}

/* Blur animation for logo */
.blur-in-250ms {
    animation: blur-in 250ms linear;
}

@keyframes blur-in {
    0% {
        filter: blur(10px);
        opacity: 0;
    }

    100% {
        filter: blur(0px);
        opacity: 1;
    }
}

/* Text typing animation for warning on home page */
.typed-text {
    overflow: hidden;
    white-space: nowrap;
    width: 0;
    animation: typing;
    animation-duration: 2.5s;
    animation-timing-function: steps(60, end);
    animation-fill-mode: forwards;
}

@keyframes typing {
    from {
        width: 0
    }

    to {
        width: 100%
    }
}

